--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-resources/secrets.properties
+**/resources/secrets.properties
 
 
 
@@ -34,3 +34,4 @@ build/
 
 ### VS Code ###
 .vscode/
+
