--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLPDB1
-spring.datasource.username=system
-spring.datasource.password=system
+spring.datasource.username=${ORACLEDB.USERNAME}
+spring.datasource.password=${ORACLEDB.PASSWORD}
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.generate-ddl=true
 
 spring.flyway.default-schema=HUB
