--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,9 +5,10 @@ spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.generate-ddl=true
 
 spring.flyway.default-schema=HUB
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
+
+#override duplicated beans encountered in the repositories
+spring.main.allow-bean-definition-overriding=true
