--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -72,6 +72,10 @@
 			<artifactId>spring-security-cas</artifactId>
 			<version>6.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-jdbc</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
