--- a/topic/.gitignore
+++ b/topic/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
-target/
 !.mvn/wrapper/maven-wrapper.jar
+/target/
 **/resources/application.properties
 
 
@@ -32,4 +32,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
