--- a/topic/.gitignore
+++ b/topic/.gitignore
@@ -1,8 +1,7 @@
 HELP.md
-!.mvn/wrapper/maven-wrapper.jar
-/target/
+.mvn/wrapper/maven-wrapper.jar
+target/
 **/resources/application.properties
-
 
 
 ### STS ###
