Adição de logs em application-test.yml para fins de testes

--- a/topic/src/test/resources/application-test.yml
+++ b/topic/src/test/resources/application-test.yml
@@ -39,3 +39,9 @@ spring:
         provider:
           auth-server:
             issuer-uri: http://127.0.0.1:8082
+
+logging:
+  level:
+    org:
+      springframework:
+        security: trace
