Ajustes de dependência e nomenclatura do projeto

--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -8,8 +8,8 @@
 		<version>3.3.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.raul.forumhub.auth.server</groupId>
-	<artifactId>authorization-server</artifactId>
+	<groupId>com.raul</groupId>
+	<artifactId>forumhub-authorization-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>authorization-server</name>
 	<description>Authorization server for the topics application</description>
@@ -17,10 +17,6 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jdbc</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -34,9 +30,8 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc11</artifactId>
-			<version>21.9.0.0</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
