--- a/user/src/main/resources/application-dev.yml
+++ b/user/src/main/resources/application-dev.yml
@@ -1,13 +1,13 @@
 #Database connection configuration
 spring:
   datasource:
-    url: jdbc:oracle:thin:@//localhost:1521/ORCLPDB1
-    username: ${ORACLEDB.USERNAME}
-    password: ${ORACLEDB.PASSWORD}
+    url: ${POSTGRES_URL}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
     driver:
-      class: oracle.jdbc.driver.OracleDriver
+      class: org.postgresql.Driver
 
-#Show formated SQL statements
+  #Show formated SQL statements
   jpa:
     show-sql: true
     properties:
@@ -24,9 +24,3 @@ spring:
 #User API port
 server:
   port: 8081
-
-logging:
-  level:
-    org:
-      springframework:
-        security: trace
