--- a/user/src/test/resources/application-test.yml
+++ b/user/src/test/resources/application-test.yml
@@ -2,8 +2,6 @@
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;INIT=CREATE SCHEMA IF NOT EXISTS HUB
-    username:
-    password:
     driver:
       class: org.h2.Driver
 
@@ -13,6 +11,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+#Flyway configuration
+  flyway:
+    enabled: false
 
   #Authorization server configuration
   security:
