Ajuste nos placeholders da string de conexão com a base de dados para fins de padronização

--- a/authorization-server/src/main/resources/application-dev.yml
+++ b/authorization-server/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 #Database connection configuration
 spring:
   datasource:
-    url: ${POSTGRES_URL}
+    url: jdbc:postgresql://localhost:${POSTGRES_PORT}/${POSTGRES_DB}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
     driver:
