--- a/topic/src/main/resources/application-dev.yml
+++ b/topic/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 #Database connection configuration
 spring:
   datasource:
-    url: ${POSTGRES_URL}
+    url: jdbc:postgresql://localhost:${POSTGRES_PORT}/${POSTGRES_DB}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
     driver:
@@ -16,7 +16,7 @@ spring:
 
   #Flyway configuration
   flyway:
-    url: ${POSTGRES_URL}
+    url: jdbc:postgresql://localhost:${POSTGRES_PORT}/${POSTGRES_DB}
     default-schema: ${POSTGRES_USER}
     user: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
