Ajutes no docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  postgres-db:
+  db:
     container_name: postgres-db
     image: postgres:16-alpine3.20
     environment:
@@ -9,7 +9,7 @@ services:
     ports:
       - ${POSTGRES_PORT}:${POSTGRES_PORT}
     volumes:
-      - data:/database/postgres
+      - data:/var/lib/postgresql/data
     networks:
       - backend
     healthcheck:
@@ -23,3 +23,6 @@ volumes:
 
 networks:
   backend:
+    driver: bridge
+    driver_opts:
+      com.docker.network.bridge.host_binding_ipv4: "127.0.0.1"
