--- a/user/src/main/resources/application-prod.yml
+++ b/user/src/main/resources/application-prod.yml
@@ -19,7 +19,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://${AUTH_SERVER_HOST}:${AUTH_SERVER_PORT}
+          issuer-uri: ${ISSUER_URI}
 
 #User API port
 server:
