--- a/authorization-server/src/main/resources/application-prod.yml
+++ b/authorization-server/src/main/resources/application-prod.yml
@@ -23,7 +23,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://127.0.0.1:8082
+          issuer-uri: ${ISSUER_URI}
 
 registered:
   client:
