Ajuste no nome da propriedade do driver do banco

--- a/user/src/test/resources/application-test.yml
+++ b/user/src/test/resources/application-test.yml
@@ -2,8 +2,7 @@
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;INIT=CREATE SCHEMA IF NOT EXISTS HUB
-    driver:
-      class: org.h2.Driver
+    driver-class-name: org.h2.Driver
 
   #Show formated SQL statements
   jpa:
