--- a/authorization-server/src/main/resources/application-prod.yml
+++ b/authorization-server/src/main/resources/application-prod.yml
@@ -24,6 +24,7 @@ spring:
         jwt:
           issuer-uri: ${ISSUER_URI}
 
+#Registered topichub and userhub client credentials
 registered:
   client:
     topic:
@@ -43,4 +44,4 @@ logging:
   level:
     org:
       springframework:
-        security: trace
+        security: debug
