--- a/user/src/main/resources/application-prod.yml
+++ b/user/src/main/resources/application-prod.yml
@@ -22,4 +22,20 @@ spring:
 
 #User API port
 server:
-  port: 8081
+  port: ${PORT}
+
+#SpringDoc configuration
+springdoc:
+  api-docs:
+    enabled: true
+    version: openapi_3_1
+    path: ${PATH_OPEN_API}
+  swagger-ui:
+    enabled: true
+    url: openapi.yaml
+    path: ${PATH_SWAGGER_UI}
+    oauth:
+      use-basic-authentication-with-access-code-grant: true
+      use-pkce-with-authorization-code-grant: true
+      client-id: ${OAUTH2_TOPIC_CLIENT_ID}
+      client-secret: ${OAUTH2_TOPIC_PASSWORD}
