--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -67,10 +67,11 @@
 			<artifactId>spring-security-cas</artifactId>
 			<version>6.3.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.session</groupId>
-			<artifactId>spring-session-jdbc</artifactId>
-		</dependency>
+<!-- Removed JDBC spring session -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.session</groupId>-->
+<!--			<artifactId>spring-session-jdbc</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
