Correção no nome da propriedade

--- a/topic/src/main/resources/application-dev.yml
+++ b/topic/src/main/resources/application-dev.yml
@@ -51,7 +51,7 @@ server:
 forumhub:
   client:
     user:
-      schema: http
+      scheme: http
       host: 127.0.0.1
       port: 8081
       path: /forumhub.io/api/v1/users/summary-info
