--- a/user/src/main/resources/application-prod.yml
+++ b/user/src/main/resources/application-prod.yml
@@ -23,6 +23,12 @@ spring:
 #User API port
 server:
   port: ${PORT}
+  ssl:
+    enabled: true
+    key-store: classpath:forumhub-user-truststore.jks
+    key-store-password: ${KEY_STORE_PASSWORD}
+    key-store-type: JKS
+    key-alias: ${KEY_ALIAS}
 
 #SpringDoc configuration
 springdoc:
