--- a/user/src/main/resources/application-prod.yml
+++ b/user/src/main/resources/application-prod.yml
@@ -24,11 +24,7 @@ spring:
 server:
   port: ${PORT}
   ssl:
-    enabled: true
-    key-store: classpath:forumhub-user-truststore.jks
-    key-store-password: ${KEY_STORE_PASSWORD}
-    key-store-type: JKS
-    key-alias: ${KEY_ALIAS}
+    enabled: false
 
 #SpringDoc configuration
 springdoc:
