Habilitado a exibição de duração da requisição no Swagger UI

--- a/topic/src/main/resources/application-prod.yml
+++ b/topic/src/main/resources/application-prod.yml
@@ -70,3 +70,4 @@ springdoc:
       use-pkce-with-authorization-code-grant: true
       client-id: ${OAUTH2_TOPIC_CLIENT_ID}
       client-secret: ${OAUTH2_TOPIC_PASSWORD}
+    displayRequestDuration: true
