Criação e ativação da inicialização de script sql para modelagem das entidades do database e demais objetos.

--- a/authorization-server/src/main/resources/application-dev.yml
+++ b/authorization-server/src/main/resources/application-dev.yml
@@ -13,6 +13,12 @@ spring:
       hibernate:
         format_sql: true
 
+  #Domain SQL init script configuration
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:scripts/init-script.sql
+
   #Override duplicated beans encountered in the repositories
   main:
     allow-bean-definition-overriding: true
