--- a/topic/src/main/resources/application-prod.yml
+++ b/topic/src/main/resources/application-prod.yml
@@ -51,7 +51,7 @@ spring:
 
 #Topic API port
 server:
-  port: ${PORT}
+  port: 8080
 
 #User client URL
 forumhub:
@@ -66,11 +66,11 @@ springdoc:
   api-docs:
     enabled: true
     version: openapi_3_1
-    path: ${PATH_OPEN_API}
+    path: /forumhub.io/api/v1/openapi-prod.yaml
   swagger-ui:
     enabled: true
-    url: openapi.yaml
-    path: ${PATH_SWAGGER_UI}
+    url: openapi-prod.yaml
+    path: /forumhub.io/api/v1/swagger-ui.html
     oauth:
       use-basic-authentication-with-access-code-grant: true
       use-pkce-with-authorization-code-grant: true
