--- a/user/src/main/resources/application-dev.yml
+++ b/user/src/main/resources/application-dev.yml
@@ -38,7 +38,7 @@ springdoc:
     path: /forumhub.io/api/v1/openapi.yaml
   swagger-ui:
     enabled: true
-    url: openapi.yaml
+    url: openapi-dev.yaml
     path: /forumhub.io/api/v1/swagger-ui.html
     oauth:
       use-basic-authentication-with-access-code-grant: true
