Desabilitado o devtools para o ambiente de produção.

--- a/topic/src/main/resources/application-prod.yml
+++ b/topic/src/main/resources/application-prod.yml
@@ -49,6 +49,11 @@ spring:
           auth-server:
             issuer-uri: ${ISSUER_URI}
 
+  #Disable devtools in production environment
+  devtools:
+    restart:
+      enabled: false
+
 #Topic API port
 server:
   port: 8080
