--- a/user/src/main/resources/application-prod.yml
+++ b/user/src/main/resources/application-prod.yml
@@ -26,6 +26,11 @@ spring:
         jwt:
           issuer-uri: ${ISSUER_URI}
 
+  #Disable devtools in production environment
+  devtools:
+    restart:
+      enabled: false
+
 #User API port
 server:
   port: 8080
