Adicionado exclusão de classes durante a execução do JaCoCo no pom.xml.

--- a/topic/pom.xml
+++ b/topic/pom.xml
@@ -164,7 +164,8 @@
                         <configuration>
                             <formats>HTML</formats>
                             <excludes>
-                                <exclude>com.raul.forumhub.topic.TopicApplication</exclude>
+                                <exclude>com/raul/forumhub/topic/TopicApplication*.class</exclude>
+                                <exclude>com/raul/forumhub/topic/security/TopicSecurityConfig*.class</exclude>
                             </excludes>
                         </configuration>
                     </execution>
@@ -176,7 +177,8 @@
                         <configuration>
                             <formats>HTML</formats>
                             <excludes>
-                                <exclude>com.raul.forumhub.topic.TopicApplication</exclude>
+                                <exclude>com/raul/forumhub/topic/TopicApplication*.class</exclude>
+                                <exclude>com/raul/forumhub/topic/security/TopicSecurityConfig*.class</exclude>
                             </excludes>
                         </configuration>
                     </execution>
